<resources>
    <string name="app_name">Bollywood Dollies</string>
    <string name="play">play</string>
    <string name="score">score</string>
    <string name="instruction">instruction</string>
    <string name="about">about</string>
    <string name="about_c">About</string>
    <string name="mess1">Educate a boy, and you educate an individual. Educate a girl, and you educate a community."
- an African proverb</string>
    <string name="mess2">Girls continue to lag behind their male counterparts in many areas of the world, in terms of access to education, completion of schooling, and acquisition of basic skills such as literacy. Almost half of the worldís out of school girls are in Sub-Saharan Africa and arround a quater are in South Asia.\n\n
        Not all girls are not as privelged as the girls in the game. This game is dedicated to millions of Girls aspiring to acquire education and reach the top. The 100% funds raised  from the game will be given to  Empower She is Girl Education project dedicated to provide educational tools to underpriveleged girls in South Asia and Africa.\n\n
        Empower She is an initaive of ZMQ to unlocking women power through technology support (www.empowershe.org).\n\n
        Developed by ZMQ under Qaff Initiative</string>

    <string name="instruction_c">Instruction</string>
    <string name="instruction_mess">1. Bollywood Divas is a Photo Quiz. You will be asked 10 questions generated by random choice.\n\n
        2. Each question will have a Hint and a hidden picture of an eminent Bollywood Actress. You have to identify the actress.\n\n
        3. The Hint will be a textual clue about that actresses from her life and works.\n\n
        4. Each hidden picture has 10 parts, where 1 part is visible and rest 9 parts are hidden.\n\n
        5. You will be given a Text box below, where you can type the name of the Actress using the Keypad interface in the game.\n\n
        6. Each question has 9 attempts to write the name correctly.\n\n
        7. Pressing a correct alphabet available will not reduce your value of attempts.\n\n
        8. Every incorrect alphabet typed will reduce your value of attempts by one, and will open any one of the hidden parts of the image.\n\n
        9. The number of attempts left are indicated in the counter panel.\n\n
        10. Your answer is correct if you are able to type all the correct alphabets in the text box, revealing the name of the actress.\n\n
        11. You have 60 seconds to answer a question.  Faster you answer, more bonus points you get.\n\n
        12. Each correct answer sends you to the next question.\n\n
        13. Your score of the current question will be indicated in the counter. It is as follows:\n
    No. of Correct Letters X 10;\n
    (if total Letters in a name are 15, you will get 150 points for all correct alphabets)\n\n
        14. On selecting a wrong alphabet, you will loose 10 points and a life.\n\n
        15. You will also get bonus points for saved time in answering a question. \n
    If you answered a question in 35 seconds, you will get a bonus of 25 points (60-35 secs.)\n\n
        16. You have a total of 9 lives in a question. On loosing all life your game will end. \n\n
        17. On succesfully completing a question, you will move next question.\n\n
        18. Wish you Good Luck!</string>
</resources>
