<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data class = "MenuBinding"/>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="zmq.com.photoquiz.activity.MainMenuActivity"
    android:background="@drawable/main_menu_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.8"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_press"
            android:text="@string/play"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/score"
            android:text="@string/score"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_press"
            app:layout_constraintTop_toBottomOf="@+id/play" />

        <Button
            android:id="@+id/instruction"
            android:text="@string/instruction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_press"
            app:layout_constraintTop_toBottomOf="@+id/score"/>

        <Button
            android:id="@+id/about"
            android:text="@string/about"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/button_press"
            app:layout_constraintTop_toBottomOf="@+id/instruction"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"/>

</LinearLayout>
</layout>