<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zmq.com.photoquiz.activity.AboutActivity"
    android:background="@drawable/instructions_bg"
    android:orientation="vertical"
    android:weightSum="10"
    android:gravity="center_horizontal">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"/>

    <TextView
        android:text="@string/about_c"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/about_image"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.2"
        android:weightSum="10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7.6"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:text="@string/mess1"
                android:textColor="@color/colorYellow"
                android:textSize="10sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7">

                <TextView
                    android:text="@string/mess2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorWhite"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </ScrollView>
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@drawable/aboutfooter"/>

</LinearLayout>
